# innovus

./: Cargo.toml  README.md
innovus/assets/: default2d_f.glsl  default2d_v.glsl
innovus/src/: lib.rs
innovus/src/data/: mod.rs
innovus/src/gfx/: mod.rs  screen.rs
innovus/src/tools/: arena.rs  mod.rs  phys.rs
sandbox/assets/palettes/: aluminum.gpl  amethyst.gpl  bark_oak.gpl  cobalt.gpl  copper.gpl  emerald.gpl  fire_glass.gpl  frigidite.gpl  phylumus.gpl  red_sand.gpl  sand.gpl  slate.gpl  steel.gpl  stone.gpl  titanium.gpl  turquoise.gpl  voltagite.gpl  wood_generic.gpl
sandbox/assets/piskel/: blocks_single.piskel  font.piskel  ground.piskel  items.piskel
sandbox/assets/shaders/: gui_v.glsl
sandbox/assets/text/: en_us.json
sandbox/src/: game.rs  main.rs
sandbox/src/audio/: mod.rs
sandbox/src/gui/: hotbar.rs  mod.rs  text.rs
sandbox/src/script/: builtin_commands.rs  mod.rs  utils.rs
sandbox/src/tools/: input.rs  mod.rs
sandbox/src/world/: mod.rs
snek/assets/: koopa.txt  ring_test.txt  test_mtl.mtl
snek/src/: main.rs  thing.rs
src/innovus/: lib.rs
src/innovus/assets/: default2d.f.glsl  default2d.v.glsl  default3d.f.glsl  default3d.g.glsl  default3d.v.glsl  default3d_f.glsl  default3d_g.glsl  default3d_v.glsl
src/innovus/data/: mod.rs
src/innovus/gfx/: color.rs  mod.rs  screen.rs
src/innovus/scene/: mod.rs
src/innovus/tools/: arena.rs  mod.rs  phys.rs
src/innovus/util/: mod.rs
src/javagame/: game.rs  main.rs
src/javagame/gui/: cursor.rs  mod.rs  text.rs
src/javagame/tools/: asset.rs  input.rs  mod.rs  noise.rs
src/snek/: main.rs
src/stratego/: main.rs
(+156 files in other folders)
