[package]
name = "rust-gaming"
version = "0.1.0"
edition = "2021"
default-run = "javagame"

[lib]
name = "innovus"
path = "src/innovus/lib.rs"

[[bin]]
name = "javagame"
path = "src/javagame/main.rs"

[[bin]]
name = "snek"
path = "src/snek/main.rs"

[[bin]]
name = "stratego"
path = "src/stratego/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
gl = "0.14.0"
glfw = "0.52.0"
image = "0.25.6"
uuid = {version = "1.2.2", features = ["v4", "fast-rng"]}
json = "0.12.4"
